--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "pino": "^6.11.0",
     "pino-colada": "^2.1.0",
     "pino-pretty": "^4.3.0",
+    "rd3": "^0.8.1",
     "react": "^17.0.1",
+    "react-d3-tree": "^2.0.1",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
     "web-vitals": "^0.2.4"
   },
-  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start | pino-colada",
     "build": "react-scripts build",
