--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "body-parser": "^1.19.0",
-    "d3": "^6.4.0",
+    "chroma-js": "^2.1.1",
+    "d3": "^6.5.0",
+    "d3-sankey": "^0.12.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-pino-logger": "^5.0.0",
@@ -24,6 +26,8 @@
     "react-router": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
+    "react-vis": "^1.11.7",
+    "uswds": "^2.10.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
