--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "rd3": "^0.8.1",
     "react": "^17.0.1",
     "react-d3-tree": "^2.0.1",
+    "react-d3-treemap": "^1.0.27",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-scripts": "4.0.1",
