--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@trussworks/react-uswds": "^1.14.0",
     "body-parser": "^1.19.0",
     "chroma-js": "^2.1.1",
     "d3": "^6.5.0",
